--- a/RYT/Views/Home/Index.cshtml
+++ b/RYT/Views/Home/Index.cshtml
@@ -2,7 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<Partial name="_NavbarPartial" />
+<div class="container">
+    <main role="main" class="pb-3">
+        @*Your work should done in this main area*@
+        <div class="text-center">
+            <h1 class="display-4">Welcome</h1>
+            <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        </div>
+    </main>
 </div>
