--- a/RYT/Views/Dashboard/_Layout.cshtml
+++ b/RYT/Views/Dashboard/_Layout.cshtml
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/UserManagementApp.styles.css" asp-append-version="true" />
+
+   @*  Settings modal, Logout confirmation modal, and appreciation modal css *@
+    <link rel="stylesheet" href="~/css/studentdashboardmodals.css" asp-append-version="true" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -34,7 +38,9 @@
             </div>
 
         </div>
+       
         <div class="drawer-content-area">
+            <Partial name="_NavbarPartial" />
             <div class="drawer-content-area-inner">
                 @RenderBody()
 
