--- a/RYT/wwwroot/css/student-profile-edit.css
+++ b/RYT/wwwroot/css/student-profile-edit.css
@@ -1,5 +1,4 @@
 ﻿
-
 .rectangle {
     margin-left: 85px;
     margin-right: 186px;
@@ -11,7 +10,7 @@
 .rectangletext {
     color: white;
     font-size: 32px;
-    font-family: 'Inter';
+    font: 'Inter';
     text-align: center;
     font-weight: 700;
     line-height: 44.80px;
@@ -22,10 +21,19 @@
     top: 53px;
     bottom: 53px;
     left: 388px;
-    
 }
-.Profile-colour{
+.babs-school{
+    position:relative;
 
+}
+.babs-form-items img{
+    position:absolute;
+    width:20px;
+    height:20px;
+    bottom:50px;
+    right:26%;
+    
+ 
 }
 
 .babs-container {
@@ -37,14 +45,24 @@
 
 .options{
     background:white;
-    width: 152px;
+    width: 162px;
     height: 96px;
     margin-right:20px;
     padding: 16px;
 }
 
+.babs-options-edit a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer
+}
+
+.babs-options-edit a:hover {
+    color: purple;
+}
+
 .babs-form-area{
-    border-left: 1px solid red;
+    border-left: 1px solid grey;
     height: 642px;
     margin-left: 20px;
 }
@@ -90,7 +108,7 @@
         background: #6938EF;
 }
 .save-button {
-    font-family:'Inter';
+    font:'Inter';
     font-size:14px;
     font-style:normal;
     font-weight:600;
@@ -98,5 +116,17 @@
 }
 .babs-edit{
     font-size:24px;
-    font-weight
+    font-weight:600;
+    margin-bottom:0;
+}
+.babs-view{
+  color:#98A2B3;
+  margin-top:0;
+
+}
+.babs-options-edit:hover {
+color: #6938EF;
+}
+.babs-options-edit:hover {
+    color: #6938EF;
 }
