--- a/RYT/Views/Account/SignUP.cshtml
+++ b/RYT/Views/Account/SignUP.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["SignUp"] = "SignUp";
+    ViewData["Title"] = "SignUp";
 }
 
 
@@ -18,34 +18,35 @@
         <form action="form--panel">
             <div class="input--fields">
                 <label for="">User Type</label>
-                <select id="cars" name="cars" class="">
+                <select class="select--dropdown" id="cars" name="cars" class="">
                     <option value="volvo">Select</option>
-                    <option value="saab">Saab</option>
+                    <option value="saab">Student</option>
+                    <option value="saab">Teacher</option>
                 </select>
             </div>
             <div class="input--fields">
                 <label for="Name">Name</label>
-                <input type="text" placeholder="Type your full name">
-                <div class="icon">
+                <input class="input--area" type="text" placeholder="Type your full name">
+                <div class="icon--21">
                     <img src="~/images/Dribbble-Light-Preview.png">
                 </div>
             </div>
             <div class="input--fields">
                 <label for="Email">Email</label>
-                <input type="text" placeholder=" Type your email">
-                <div class="icon">
+                <input class="input--area" type="text" placeholder=" Type your email">
+                <div class="icon--21">
                     <img src="~/images/Vector.png">
                 </div>
             </div>
             <div class="input--fields">
                 <label for="Password">Password</label>
-                <input type="text" placeholder="Type your password">
-                <div class="icon">
+                <input class="input--area" type="text" placeholder="Type your password">
+                <div class="icon--21">
                     <img src="~/images/Icon.png">
                 </div>
             </div>
             <div class="btn--field">
-                <button>Sign Up</button>
+                <button class="button--21">Sign Up</button>
             </div>
             <div class="line--class">
                 <div class="line--1">
@@ -58,7 +59,7 @@
                 <div class="google-img">
                     <img src="~/images//Google.png" />
                 </div>
-                <button class="email--signin">Google</button>
+                <button class="email--signin button--21">Google</button>
             </div>
             <p class="login">Already have an account? <a href="#">Login</a></p>
         </form>
