--- a/RYT/wwwroot/css/signUp.css
+++ b/RYT/wwwroot/css/signUp.css
@@ -83,7 +83,7 @@ html {
     position: relative;
 }
 
-input {
+.input--area {
     height: 35px;
     margin: 1px;
     border-radius: 5px;
@@ -99,12 +99,11 @@ input {
     color: #D0D5DD;
     border: 1px solid #D0D5DD;
     position: relative;
-    margin-left:;
 }
 
-.icon {
+.icon--21 {
     position: absolute;
-    top: 41px;
+    top: 40px;
     left: 5px;
     width: 40px;
     height: 50%;
@@ -113,11 +112,11 @@ input {
     color: #98A2B3;
 }
 
-select option {
+.select--dropdown option {
     color: #D0D5DD;
 }
 
-select {
+.select--dropdown {
     height: 35px;
     margin: 1px;
     border-radius: 5px;
@@ -143,13 +142,16 @@ select {
     border-radius:5px;
 }
 
-.btn--field--2 button{
-    border:none;
+.btn--field--2 .button--21 {
+    background: none;
+    border: none;
+    color: #D0D5DD;
 }
 
 .google-img {
     width: 20px;
     background: white;
+    margin-left:15px;
 }
 
 .line--class {
@@ -177,7 +179,7 @@ select {
     background: #D0D5DD;
 } */
 
-button {
+.button--21 {
     width: 100%;
     margin: 1px;
     background: #6938EF;
