--- a/RYT/Views/Dashboard/MessagingUnderStudentDashboard.cshtml
+++ b/RYT/Views/Dashboard/MessagingUnderStudentDashboard.cshtml
@@ -27,7 +27,7 @@
                                 <img src="~/images/Default.png" class="ryt-13-profile_image" alt="profile_Image" />
                             </div>
                             <div class="ryt-13-chat_snip_area_left">
-                                <h6 class="ryt-13-chatmate">Oluchi Okwuoma</h6>
+                                <h6 class="ryt-13-chatmate_left">Oluchi Okwuoma</h6>
                                 <p class="ryt-13-chat_snip">Artificial Rome develops its.......</p>
                             </div>
                         </div>
@@ -40,7 +40,7 @@
                                 <img src="~/images/Default.png" class="ryt-13-profile_image" alt="profile_Image" />
                             </div>
                             <div class="ryt-13-chat_snip_area_left">
-                                <h6 class="ryt-13-chatmate">Oluchi Okwuoma</h6>
+                                <h6 class="ryt-13-chatmate_left">Oluchi Okwuoma</h6>
                                 <p class="ryt-13-chat_snip">Artificial Rome develops its.......</p>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
                                 <img src="~/images/Default.png" class="ryt-13-profile_image" alt="profile_Image" />
                             </div>
                             <div class="ryt-13-chat_snip_area_left">
-                                <h6 class="ryt-13-chatmate">Oluchi Okwuoma</h6>
+                                <h6 class="ryt-13-chatmate_left">Oluchi Okwuoma</h6>
                                 <p class="ryt-13-chat_snip">Artificial Rome develops its.......</p>
                             </div>
                         </div>
@@ -66,7 +66,7 @@
                                 <img src="~/images/Default.png" class="ryt-13-profile_image" alt="profile_Image" />
                             </div>
                             <div class="ryt-13-chat_snip_area_left">
-                                <h6 class="ryt-13-chatmate">Oluchi Okwuoma</h6>
+                                <h6 class="ryt-13-chatmate_left">Oluchi Okwuoma</h6>
                                 <p class="ryt-13-chat_snip">Artificial Rome develops its.......</p>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                                 <img src="~/images/Default.png" class="ryt-13-profile_image" alt="profile_Image" />
                             </div>
                             <div class="ryt-13-chat_snip_area_left">
-                                <h6 class="ryt-13-chatmate">Oluchi Okwuoma</h6>
+                                <h6 class="ryt-13-chatmate_left">Oluchi Okwuoma</h6>
                                 <p class="ryt-13-chat_snip">Artificial Rome develops its.......</p>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                                 <img src="~/images/Default.png" class="ryt-13-profile_image" alt="profile_Image" />
                             </div>
                             <div class="ryt-13-chat_snip_area_left">
-                                <h6 class="ryt-13-chatmate">Oluchi Okwuoma</h6>
+                                <h6 class="ryt-13-chatmate_left">Oluchi Okwuoma</h6>
                                 <p class="ryt-13-chat_snip">Artificial Rome develops its.......</p>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                                 <img src="~/images/Default.png" class="ryt-13-profile_image" alt="profile_Image" />
                             </div>
                             <div class="ryt-13-chat_snip_area_left">
-                                <h6 class="ryt-13-chatmate">Oluchi Okwuoma</h6>
+                                <h6 class="ryt-13-chatmate_left">Oluchi Okwuoma</h6>
                                 <p class="ryt-13-chat_snip">Artificial Rome develops its.......</p>
                             </div>
                         </div>
@@ -118,7 +118,7 @@
                                 <img src="~/images/Default.png" class="ryt-13-profile_image" alt="profile_Image" />
                             </div>
                             <div class="ryt-13-chat_snip_area_left">
-                                <h6 class="ryt-13-chatmate">Oluchi Okwuoma</h6>
+                                <h6 class="ryt-13-chatmate_left">Oluchi Okwuoma</h6>
                                 <p class="ryt-13-chat_snip">Artificial Rome develops its.......</p>
                             </div>
                         </div>
@@ -232,7 +232,7 @@
                                     <img class="ryt-13-profile_image" alt="Image" src="~/images/Default - Copy.png"/>
                                 </div>
                                 <div class="ryt-13-message_container_reverse ">
-                                    <h6 class="ryt-13-chatmat .ryt-13-text-reverse">Hello good morning, how are you, please kindly check your wallet balance</h6>
+                                    <h6 class="ryt-13-chatmat ">Hello good morning, how are you, please kindly check your wallet balance</h6>
                                 </div>
                            </div>
                             <div class="ryt-13-time_delivery_reverse">
