--- a/RYT/wwwroot/css/MessagingUnderStudentDashboard.css
+++ b/RYT/wwwroot/css/MessagingUnderStudentDashboard.css
@@ -93,11 +93,10 @@
     flex-direction: column;
     
 }
-.ryt-13-chatmate {
+.ryt-13-chatmate_left {
     color: var(--Main-Text, #101828);
     font-size: 14px;
     font-style: normal;
-    font-weight: 600;
     margin: 0;
     padding:0;
 }
@@ -166,10 +165,8 @@ object-fit:cover;
     display: flex;
     gap: 16px;
     flex-direction: row-reverse;
-    color: white;
 }
 .ryt-13-message_container {
-    color: #979797;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -194,33 +191,30 @@ object-fit:cover;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 20px; /* 142.ryt-13-857% */
+    line-height: 20px;
     padding: 4px 18px;
 }
 .ryt-13-chatmat {
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 20px; /* 142.ryt-13-857% */
+    line-height: 20px;
     padding: 4px 18px;
 }
 .ryt-13-time_delivery{
     position: absolute;
     right: 5px;
-    top: 50px;
+    top: 54px;
     display: flex;
     font-size:12px;
-    align-items:baseline;
     margin-bottom: 24px;
-    height:17px;
 }
 .ryt-13-time_delivery_reverse{
     position: absolute;
     right: 62px;
-    top: 50px;
+    top: 54px;
     display: flex;
     font-size:12px;
-    align-items:baseline;
     margin-bottom: 24px;
     height:17px;
 }
