--- a/RYT/wwwroot/css/neo.css
+++ b/RYT/wwwroot/css/neo.css
@@ -98,7 +98,7 @@ div .neo-search-icon {
     color: #ffffff;
 }
 
-button img {
+button .neo-img {
     width: 17px;
     height: 20px;
     padding-bottom: 3px;
