--- a/RYT/Views/Shared/_NavbarPartial.cshtml
+++ b/RYT/Views/Shared/_NavbarPartial.cshtml
@@ -44,12 +44,12 @@
             <div id="navbarNAV" class="navbar-collapse collapse ogm-home-nav-flex">
                 <ul class="navbar-nav">
                     <li class="nav-item active text-center ">
-                        <a class="nav-link text" style="color: var(--Purple-600, #6938EF)" asp-area="" asp-controller="Dashboard" asp-action="AccountCreatedSuccessfullyModalUnderStudentDashboard">
+                        <a class="nav-link text" style="color: var(--Purple-600, #6938EF)" asp-area="" asp-controller="" asp-action="">
                             Home
                         </a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link text-black" asp-controller="Dashboard" asp-action="NotificationModalUnderStudentDashboard">
+                        <a class="nav-link text-black" asp-controller="" asp-action="">
                             About
                         </a>
                     </li>
