COMMIT NEW NAVBAR

--- a/RYT/wwwroot/css/og-murphy-style.css
+++ b/RYT/wwwroot/css/og-murphy-style.css
@@ -5,7 +5,8 @@ p {
 
 .ogm-notify-flex-nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+    width: 100%;
 }
 
 .ogm-notify-panel {
