--- a/RYT/Views/Dashboard/_Layout.cshtml
+++ b/RYT/Views/Dashboard/_Layout.cshtml
@@ -18,7 +18,7 @@
 </head>
 <body>
     
-
+    <Partial name="_NavBarPartial" />
     <div class="drawer-panel">
         <div class="side-drawer">
             <div class="side-drawer-inner">
