--- a/RYT/Views/Shared/_NavbarPartial.cshtml
+++ b/RYT/Views/Shared/_NavbarPartial.cshtml
@@ -20,7 +20,7 @@
 
     .ogm-home-nav-flex {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         font-weight: 600;
     }
 
@@ -29,42 +29,69 @@
         cursor: pointer;
     }
 
+    #a-kick-left {
+        position: absolute;
+        left: 50px;
+    }
+
 </style>
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand mb-0 h1" asp-area="" asp-controller="Home" asp-action="Index">
-                <img class="d-inline-block align-top" src="~/images/ogm-main-logo.png" style="width: 141px; height: 35px" />
-            </a>
+            
             <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNAV" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div id="navbarNAV" class="navbar-collapse collapse ogm-home-nav-flex">
-                <ul class="navbar-nav">
-                    <li class="nav-item active text-center ">
-                        <a class="nav-link text" style="color: var(--Purple-600, #6938EF)" asp-area="" asp-controller="" asp-action="">
-                            Home
+            
+                @if (ViewData["Title"] == "Home Page")
+                {
+                    <div id="navbarNAV" class="navbar-collapse collapse ogm-home-nav-flex">
+                        <a id="kick-left" class="navbar-brand mb-0 h1" asp-area="" asp-controller="Home" asp-action="Index">
+                            <img class="d-inline-block align-top" src="~/images/ogm-main-logo.png" style="width: 141px; height: 35px" />
                         </a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link text-black" asp-controller="" asp-action="">
-                            About
+                        <ul class="navbar-nav">
+                            <li class="nav-item active text-center ">
+                                <a class="nav-link text" style="color: var(--Purple-600, #6938EF)" asp-area="" asp-controller="" asp-action="">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="nav-item text-center">
+                                <a class="nav-link text-black" asp-controller="" asp-action="">
+                                    About
+                                </a>
+                            </li>
+                            <li class="nav-item active text-center">
+                                <a class="nav-link text-black">
+                                    Contact Us
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white ogm-btn-nav">
+                                    Get Started
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                }
+                else
+                {
+                    <a id="a-kick-left" class="navbar-brand" asp-area="" asp-controller="Dashboard" asp-action="Notification">
+                    <img src="~/images/ogm-main-logo.png" />
+                    </a>
+                    <div class="ogm-notify-flex-nav">
+                        <a class="navbar-brand" asp-area="" asp-controller="" asp-action="">
+                            <img src="~/images/ogm-notify-icon.png" />
                         </a>
-                    </li>
-                    <li class="nav-item active text-center">
-                        <a class="nav-link text-black">
-                            Contact Us
+
+                        <a class="nav-link" style="font-weight: bold; color: black;">
+                            <img src="~/images/ogm-dummy-image.png" style="width: 30px" /> Franca John
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white ogm-btn-nav">
-                            Get Started
-                        </a>
-                    </li>
-                </ul>
-            </div>
+                    </div>
+                }
+                
+
 
         </div>
 
