--- a/RYT/Views/Dashboard/_Layout.cshtml
+++ b/RYT/Views/Dashboard/_Layout.cshtml
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Portal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/TeacherChangePassword.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/UserManagementApp.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body >
     
 
     <div class="drawer-panel">
@@ -24,7 +26,8 @@
                     <p>Message</p>
                 </a>
 
-                <a asp-action="SendReward" asp-controller="Dashboard"><p>Send Reward</p></a>
+
+                
 
             </div>
                 <div class="sperator"></div>
@@ -47,6 +50,8 @@
             &copy; 2024 - UserManagementApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
