--- a/RYT/Views/Shared/_NavbarPartial.cshtml
+++ b/RYT/Views/Shared/_NavbarPartial.cshtml
@@ -14,6 +14,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="TeacherChangePassword">TeacherChangePassword</a>
+                    </li>
                 </ul>
             </div>
         </div>
