conflicts resolved successfully

--- a/RYT/Views/Dashboard/TeacherChangePassword.cshtml
+++ b/RYT/Views/Dashboard/TeacherChangePassword.cshtml
@@ -1,32 +1,53 @@
-﻿
-        <div class="ccu-rectangle">
-            <img src="~/image/Rectangle 307.jpg" />
-            <div class="ccu-rectangletext">
-                <p>Profile</p>
-            </div>
-        </div>
-        <div class="ccu-container">
-            <div class="options">
-                <p class="ccu-options-edit"><a href="#">Edit Profile</a></p>
-                <p class="ccu-options-edit"><a href="#">Change Password</a></p>
-            </div>
-            <div class="ccu-form-area">
-                <div class="ccu-form-details">
-                    <P class="ccu-edit">Change Password</P>
-                    <form class="ccu-form-items">
-                        <label>Old password</label>
-                        <input class="ccu-input" type="text" placeholder="Type in old password" />
-                        <br />
-                        <label>New password</label>
-                        <input class="ccu-input" type="text" placeholder="Type in new password" />
-                        <br />
-                        <label>Confirm new password</label>
-                        <input class="ccu-input" type="text" placeholder="Confirm password" />
-                        <br />
+﻿<div class="RYTS-16-rectangle">
+    <img src="~/image/Rectangle 307.jpg" />
+    <div class="RYTS-16-rectangletext">
+        <p>Profile</p>
+    </div>
+</div>
+<div class="RYTS-16-auth-container">
+    <div class="RYTS-16-options">
+        <p class="RYTS-16-auth-options-edit"><a href="#">Edit Profile</a></p>
+        <p class="RYTS-16-auth-options-edit"><a href="#">Change Password</a></p>
+    </div>
+    <div class="RYTS-16-auth-form-area">
+        <link href="c:\users\decagon\source\repos\ryt\ryt\wwwroot\css\changepasswordforstudent.css" rel="stylesheet" />
+        <div class="RYTS-16-auth-form-details">
+            <P class="RYTS-16-auth-edit">Change Password</P>
+            <form class="RYTS-16-auth-form-items">
+                <label>Old password</label>
+                <input type="text" placeholder="Type in old Password" />
+                <br />
+                <label>New Password</label>
+                <input type="text" placeholder="Type in new password" />
+                <br />
+                <label>Confirm New Password</label>
+                <input type="text" placeholder="Confirm password" />
+                <br />
 
-                        <button type="submit" class="ccu-save-button">Save change</button>
+                <button type="submit" class="RYTS-16-save-button">Save change</button>
 
-                    </form>
-                </div>
-            </div>
+            </form>
         </div>
+    </div>
+</div>
+
+
+<script>
+    // JavaScript function to hide the image when typing starts
+
+    function hideImage() {
+        var image = document.getElementById("hiddenImage");
+        var textbox = document.getElementById("textInput");
+        // Check if the textbox has any value
+        if (textbox.value.trim() !== "") {
+            // If there is text in the textbox, hide the image
+            image.style.opacity = 0;
+
+        }
+        else {
+            // If the textbox is empty, show the image
+            image.style.opacity = 6;
+        }
+
+    }
+</script>
