--- a/RYT/wwwroot/css/TeacherChangePassword.css
+++ b/RYT/wwwroot/css/TeacherChangePassword.css
@@ -1,16 +1,15 @@
-.ccu-body 
-{
+.RYTS-16-rectangle {
     margin-left: 85px;
     margin-right: 186px;
     margin-top: 40px;
     position: relative;
-
 }
-.ccu-rectangletext 
-{
+
+
+.RYTS-16-rectangletext {
     color: white;
     font-size: 32px;
-    font: 'Inter';
+    font-family: 'Inter';
     text-align: center;
     font-weight: 700;
     line-height: 44.80px;
@@ -18,30 +17,22 @@
     margin-bottom: 53px;
     height: 45px;
     position: absolute;
-    top: 90px;
+    top: 53px;
     bottom: 53px;
-    left: 700px;
+    left: 388px;
 }
 
-.ccu-form-items img 
-{
-    position: relative;
-    width: 20px;
-    height: 20px;
-    bottom: 8%;
-    
-    margin-left: 360px;
+.RYTS-16-Profile-colour {
 }
 
-.ccu-container {
+.RYTS-16-auth-container {
     display: flex;
     width: 880px;
-    margin-left: 0px;
+    margin-left: 85px;
     margin-top: 20px;
 }
 
-.ccu-options 
-{
+.RYTS-16-auth-options {
     background: white;
     width: 162px;
     height: 96px;
@@ -49,69 +40,64 @@
     padding: 16px;
 }
 
-.ccu-options-edit a 
-{
+.RYTS-16-auth-options-edit a {
     text-decoration: none;
     color: black;
+    cursor: pointer
 }
 
-    .ccu-options-edit a:hover 
-    {
+    .RYTS-16-auth-options-edit a:hover {
         color: purple;
     }
 
-.ccu-form-area {
+.RYTS-16-auth-form-area {
     border-left: 1px solid grey;
     height: 478px;
     margin-left: 20px;
 }
 
-.ccu-form-details 
-{
+.RYTS-16-auth-form-details {
     width: 478px;
     height: 566px;
     margin-left: 60px;
 }
 
-.ccu-form-items 
-{
+.RYTS-16-auth-form-items {
     background: white;
     height: 390px;
     padding: 32px 40px;
 }
 
-    .ccu-form-items label, .ccu-form-items input 
-    {
+    .RYTS-16-auth-form-items label, .RYTS-16-auth-form-items input {
         display: block;
         width: 100%;
     }
 
-    .ccu-form-items input 
-    {
-        height: 44px;
-        padding: 12px, 16px, 12px, 16px;
-        border-radius: 6px;
-        border: 1px solid #D0D5DD;
+.RYTS-16-babs-form-items label {
+}
+
+.RYTS-16-auth-form-items input {
+    height: 44px;
+    padding: 12px, 16px, 12px, 16px;
+    border-radius: 6px;
+    border: 1px solid #D0D5DD;
+}
+
+    .RYTS-16-auth-form-items input:focus {
+        outline: 1px solid #6938EF;
+        background: #EAECF0;
     }
 
-        .ccu-form-items input:focus 
-        {
-            outline: 1px solid #6938EF;
-            background: #EAECF0;
-        }
+.RYTS-16-auth-form-items button {
+    width: 100%;
+    height: 44px;
+    padding: 12px, 16px, 12px, 16px;
+    border-radius: 6px;
+    background: #6938EF;
+}
 
-    .ccu-form-items button 
-    {
-        width: 100%;
-        height: 44px;
-        padding: 12px, 16px, 12px, 16px;
-        border-radius: 6px;
-        background: #6938EF;
-    }
-
-.ccu-save-button 
-{
-    font: 'Inter';
+.RYTS-16-save-button {
+    font-family: 'Inter';
     font-size: 14px;
     font-style: normal;
     font-weight: 600;
@@ -119,27 +105,35 @@
     border: none;
 }
 
-.ccu-edit 
-{
+.RYTS-16-auth-edit {
     font-size: 24px;
     font-weight: 600;
-   margin-bottom: 8%;
+    margin-bottom: 8%;
     align-content: center;
 }
 
-.ccu-view 
-{
+.RYTS-16-auth-view {
     color: #98A2B3;
     margin-bottom: 10px;
 }
 
-.ccu-options-edit:hover 
-{
+.RYTS-16-auth-options-edit:hover {
     color: #6938EF;
 }
 
-.ccu-input::placeholder 
-{
-    padding-left: 20px;
+.RYTS-16-auth-options-edit:hover {
+    color: #6938EF;
 }
 
+.RYTS-16-options {
+    margin: 1.2rem 4rem 0rem 0rem;
+    box-sizing: border-box;
+    padding: 1.6rem;
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    flex-shrink: 0;
+    height: 110px;
+      width: auto;
+}
