--- a/RYT/Views/Dashboard/ChangePassword.cshtml
+++ b/RYT/Views/Dashboard/ChangePassword.cshtml
@@ -6,8 +6,8 @@
 </div>
 <div class="RYTS-16-auth-container">
     <div class="RYTS-16-options">
-        <p class="RYTS-16-auth-options-edit"><a href="#">Edit Profile</a></p>
-        <p class="RYTS-16-auth-options-edit"><a href="#">Change Password</a></p>
+        <p class="RYTS-16-auth-options-edit"><a asp-action="editProfile">Edit Profile</a></p>
+        <p class="RYTS-16-auth-options-edit"><a asp-action="changePassword">Change Password</a></p>
     </div>
     <div class="RYTS-16-auth-form-area">
         <link href="c:\users\decagon\source\repos\ryt\ryt\wwwroot\css\changepasswordforstudent.css" rel="stylesheet" />
