--- a/RYT/Views/Dashboard/EditProfile.cshtml
+++ b/RYT/Views/Dashboard/EditProfile.cshtml
@@ -11,8 +11,8 @@
     </div>
    <div class="babs-container">
        <div class="options">
-            <p class="babs-options-edit"><a href="#">Edit Profile</a></p>
-            <p class="babs-options-edit"><a href="#">Change Password</a></p>
+            <p class="babs-options-edit"><a asp-action="editProfile">Edit Profile</a></p>
+            <p class="babs-options-edit"><a asp-action="changePassword">Change Password</a></p>
        </div>
        <div class="babs-form-area">
             <div class="babs-form-details">
