--- a/RYT/wwwroot/css/student-profile-edit.css
+++ b/RYT/wwwroot/css/student-profile-edit.css
@@ -46,7 +46,7 @@
 
 .options{
     background:white;
-    width: 162px;
+    width: auto;
     height: 96px;
     margin-right:20px;
     padding: 16px;
