--- a/RYT/Views/Account/SignUP.cshtml
+++ b/RYT/Views/Account/SignUP.cshtml
@@ -4,8 +4,9 @@
 
 
 <div class="section--container">
+   <a asp-action="index" asp-controller="home">
     <div class="head--placer">
-        <img src="~/images/Frame 12.png" alt="">
+        <img src="~/images/Frame 12.png" alt="" style="margin-right:10px">
         <div class="placer--text">
             <div>
                 <img class="logo--img" src="~/images/RYT.png" alt=""><br><span class="logo--text">Reward your Teacher</span>
@@ -13,6 +14,7 @@
             <!-- <p class="logo-text-2">Reward your Teacher</p> -->
         </div>
     </div>
+    </a>
     <div class="container--section">
         <h2>Create an account</h2>
         <form action="form--panel">
@@ -64,11 +66,6 @@
             <p class="login">Already have an account? <a href="#">Login</a></p>
         </form>
     </div>
-
-
-</div>
-    </div>
-
-
+    <Partial name="_AccountCreatedSuccessfullyPartial" />
 
 </div>
