--- a/RYT/Views/Shared/_Layout.cshtml
+++ b/RYT/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />*@
     <link rel="stylesheet" href="~/css/site.css?v=1" asp-append-version="true" />
     <link rel="stylesheet" href="~/RYT.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/fundWalllet-paySuccess.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TeacherChangePassword.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="~/css/signUp.css?v=6">
