--- a/RYT/wwwroot/css/StudentSendModal-ryts-2.css
+++ b/RYT/wwwroot/css/StudentSendModal-ryts-2.css
@@ -46,13 +46,12 @@
 }
 
 .form-ryts-2 {
-    width: 502px;
-    height: 72px;
+    width: 100%;
     text-align: left;
 }
 
 .input-field-ryts-2 {
-    width: 497px;
+    width: 100%;
     height: 44px;
     border-radius: 5px;
     margin-left: 5px;
@@ -60,7 +59,7 @@
 }
 
 .input-layer-ryts-2 {
-    width: 490px;
+    width: 100%;
     height: 44px;
     border-radius: 5px;
     border: none;
@@ -77,7 +76,7 @@
 }
 
 .btn-ryts-2 {
-    width: 490px;
+    width: 100%;
     height: 44px;
     border-radius: 5px;
     border: none;
