Fixed the issue of merging error.

--- a/RYT/Views/Dashboard/_Layout.cshtml
+++ b/RYT/Views/Dashboard/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/css/student-profile-edit.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/og-murphy-style.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/TeacherChangePassword.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/teacher-funding-received.css" asp-append-version="true" />
     @* <link rel="stylesheet" href="~/UserManagementApp.styles.css" asp-append-version="true" /> *@
 
     <link rel="stylesheet" href="~/css/StudentProfileModal-ryts-2.css" asp-append-version="true" />
