Teacher sign up pages

--- a/RYT/Views/Shared/_Layout.cshtml
+++ b/RYT/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.5.1/css/all.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/teacher_signup.css" />
 </head>
 <body>
   
